# sdss_asteroid_detect

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
cmake-modules/: FindOpenCV.cmake
data/: asteroid-detect.sh  check_candidate_moving_object.sh  check_moving_object.sh  list-candidates.sh  naive-detect.sh  remove-candidates.sh  remove-thumb.sh
src/: detect.hpp  helpers.hpp  test.cpp  utils.hpp
src/detect/: main.cpp
src/naive_detect/: main.cpp
test/: unit_test_detect.cpp  unit_test_main.cpp  unit_test_naive_detect.cpp
